Fixing scrollbars in blended docs

--- a/doc/scss/bootstrap/blended.scss
+++ b/doc/scss/bootstrap/blended.scss
@@ -29,12 +29,28 @@ html,body {
   bottom: 60px;
 }
 
+#page {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
 a.nav-link {
   color: white;
   text-decoration: underline;
 }
 
+.container {
+  width: 100%;
+  height: 100%;
+}
+
 .scrollbars {
   overflow: auto;
   position: relative;
+}
+
+.ps__rail-x,
+.ps__rail-y {
+   opacity: 0.2;
 }
